# petscDebug

./: CMakeLists.txt  CombustionChamberV5_unrefinedv1.1.msh  R1_5m.msh  README.md  combustionChamber2d_refinedv3.msh  dmLocate.c  example.c  gmshAreaCheck.c  gmshCellDebug.c  gmshDistribute.c  gmshExtrude.c  gmshIO.c  gmshVolumeCheck.c  meshMapping.c  particleFV.c  particlesInDm.c  periodicMeshOutput.c  petscSf.c  petscSfPlayground.cpp  radEqTest.msh  subDmTest.c  vanishingParticles.c  xdmfGen.c
